@@ -5,7 +5,10 @@ UNRELEASED, S3QL tip
   * S3QL no longer requires the unittest2 third-party Python
     module.
 
-  * S3QL no longer requires the lzma third-party Python module.
+  * S3QL no longer requires the pycryptopp and lzma third-party
+    Python modules.
+
+  * S3QL now requires the pycrypto third-party Python module.
 
 2013-04-09, S3QL 1.14
 
